# Native-Android-Examples

./: README.md  Readme_HI.md
1.HelloJNI/: settings.gradle
1.HelloJNI/app/: build.gradle
1.HelloJNI/app/src/androidTest/java/com/x64m/hellojni/: ExampleInstrumentedTest.java
1.HelloJNI/app/src/main/: AndroidManifest.xml
1.HelloJNI/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h
1.HelloJNI/app/src/main/java/com/x64m/hellojni/: MainActivity.java
1.HelloJNI/app/src/main/res/layout/: activity_main.xml
1.HelloJNI/app/src/main/res/values/: strings.xml
1.HelloJNI/gradle/wrapper/: gradle-wrapper.properties
2.Calculator_NativeLibrary/: settings.gradle
2.Calculator_NativeLibrary/app/: build.gradle
2.Calculator_NativeLibrary/app/src/main/: AndroidManifest.xml
2.Calculator_NativeLibrary/app/src/main/cpp/: native-lib.cpp  native-lib.h
2.Calculator_NativeLibrary/app/src/main/res/layout/: activity_main.xml
2.Calculator_NativeLibrary/app/src/main/res/values/: strings.xml
2.Calculator_NativeLibrary/gradle/wrapper/: gradle-wrapper.properties
3.NativeObfuscation/: settings.gradle
3.NativeObfuscation/app/: build.gradle
3.NativeObfuscation/app/src/main/: AndroidManifest.xml
3.NativeObfuscation/app/src/main/cpp/: native-lib.cpp
3.NativeObfuscation/app/src/main/res/drawable/: ic_baseline_account_box_24.xml
3.NativeObfuscation/app/src/main/res/layout/: activity_main.xml
3.NativeObfuscation/app/src/main/res/values/: strings.xml
3.NativeObfuscation/gradle/wrapper/: gradle-wrapper.properties
(+7 files in other folders)
